--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <p>WebPack works!
   <span>Look</span>
 </p>
-<img src="" id="home" title="home"/>
-<img src="" id="bigHome" height='75px' width='75px' title="home"/>
+<img src="images/home.png" id="home" title="home"/>
+<img src="images/home-big.png" id="bigHome" height='75px' width='75px' title="home"/>
 </body>
 </html>
