--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <span>Look</span>
 </p>
 <img src="images/home.png" id="home" title="home"/>
-<img src="images/home-big.png" id="bigHome" height='75px' width='75px' title="home"/>
+<img src="images/home-big.png" id="bigHome" title="home"/>
 </body>
 </html>
